# ES-2004-SPI-Project-

./: CMakeLists.txt  README.md  main.c
web/: BridgeToPico.py  index.html  server.py
web/static/: app.js  style.css
